{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 2488,
  "lineage": "544b6bc7-e0ad-4389-6d72-f53f5d835bd2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae4d3fbcd459ec01",
            "association_id": "eipassoc-00061880050e2e745",
            "domain": "vpc",
            "id": "eipalloc-0ae4d3fbcd459ec01",
            "instance": "i-0d56d9e955ca451d6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07c8840fa668c79dd",
            "private_dns": "ip-10-10-0-121.ap-northeast-2.compute.internal",
            "private_ip": "10.10.0.121",
            "public_dns": "ec2-43-200-31-166.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.31.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-eip-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-eip-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.public",
            "module.ec2.data.aws_ami.amazon_linux-2",
            "module.sg.aws_security_group.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd9fb5982f9baae1",
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:instance/i-0d56d9e955ca451d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d56d9e955ca451d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "jsp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c8840fa668c79dd",
            "private_dns": "ip-10-10-0-121.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.121",
            "public_dns": "ec2-43-200-31-166.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.31.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e243f505a3ce3bae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4dd51c63cd039dd",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-bastion"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d794e5ffa6f9d2b1"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux-2",
            "module.sg.aws_security_group.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:loadbalancer/app/jsp-default-web-lb/df6b04eed462c6f8",
            "arn_suffix": "app/jsp-default-web-lb/df6b04eed462c6f8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jsp-default-web-lb-1436745161.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:loadbalancer/app/jsp-default-web-lb/df6b04eed462c6f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jsp-default-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da68d18e7313bc41"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056e5018ce19e77d7"
              },
              {
                "subnet_id": "subnet-05acd95c15cee7c08"
              }
            ],
            "subnets": [
              "subnet-056e5018ce19e77d7",
              "subnet-05acd95c15cee7c08"
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-default-web-lb"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-default-web-lb"
            },
            "vpc_id": "vpc-08e8693daae7b492e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.web_lb_sg",
            "module.vpc.aws_subnet.web_lb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:listener/app/jsp-default-web-lb/df6b04eed462c6f8/7d6d3b7a8e625570",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:057845469470:certificate/aa5ec684-4c50-432d-b850-67ca951dbd34",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:targetgroup/jsp-default-web-lb-tg/0f898792fbfe5743",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:listener/app/jsp-default-web-lb/df6b04eed462c6f8/7d6d3b7a8e625570",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:loadbalancer/app/jsp-default-web-lb/df6b04eed462c6f8",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.web_lb",
            "module.lb.aws_lb_target_group.web_lb_tg",
            "module.route53.aws_acm_certificate.jsp_tech_acm",
            "module.route53.aws_acm_certificate_validation.acm_validation",
            "module.route53.aws_route53_record.acm_record",
            "module.route53.aws_route53_zone.jsp_route53",
            "module.sg.aws_security_group.web_lb_sg",
            "module.vpc.aws_subnet.web_lb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:listener/app/jsp-default-web-lb/df6b04eed462c6f8/34f97ef7c6baf876",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:listener/app/jsp-default-web-lb/df6b04eed462c6f8/34f97ef7c6baf876",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:loadbalancer/app/jsp-default-web-lb/df6b04eed462c6f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.web_lb",
            "module.sg.aws_security_group.web_lb_sg",
            "module.vpc.aws_subnet.web_lb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:targetgroup/jsp-default-web-lb-tg/0f898792fbfe5743",
            "arn_suffix": "targetgroup/jsp-default-web-lb-tg/0f898792fbfe5743",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,301",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:057845469470:targetgroup/jsp-default-web-lb-tg/0f898792fbfe5743",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jsp-default-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-086d69d7dbf1ff0b5",
            "description": "private security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d69d7dbf1ff0b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d794e5ffa6f9d2b1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da68d18e7313bc41"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da68d18e7313bc41"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jsp-private-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-private-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-0d794e5ffa6f9d2b1",
            "description": "public security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d794e5ffa6f9d2b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp RDP(random test ip)",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp SSH(random test ip)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jsp-public-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-014d5c55debd05849",
            "description": "rds security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014d5c55debd05849",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d794e5ffa6f9d2b1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086d69d7dbf1ff0b5",
                  "sg-0d794e5ffa6f9d2b1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jsp-rds-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-0da68d18e7313bc41",
            "description": "WEB LB security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da68d18e7313bc41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From lb http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From lb httpd",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Self Refer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "jsp-web-lb-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_bastion_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1010660119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086d69d7dbf1ff0b5",
            "security_group_rule_id": "sgr-03c30489b3257f29c",
            "self": false,
            "source_security_group_id": "sg-0d794e5ffa6f9d2b1",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.private",
            "module.sg.aws_security_group.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_http_lb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2791526266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086d69d7dbf1ff0b5",
            "security_group_rule_id": "sgr-0e0627e7f87dc9d17",
            "self": false,
            "source_security_group_id": "sg-0da68d18e7313bc41",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.private",
            "module.sg.aws_security_group.web_lb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_https_lb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1954672238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086d69d7dbf1ff0b5",
            "security_group_rule_id": "sgr-08c856ea32e6f719b",
            "self": false,
            "source_security_group_id": "sg-0da68d18e7313bc41",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.private",
            "module.sg.aws_security_group.web_lb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_bastion_mysql_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-468844357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014d5c55debd05849",
            "security_group_rule_id": "sgr-0767b31373ffc17ae",
            "self": false,
            "source_security_group_id": "sg-0d794e5ffa6f9d2b1",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public",
            "module.sg.aws_security_group.rds",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_bastion_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3182552189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014d5c55debd05849",
            "security_group_rule_id": "sgr-008bf264785d89715",
            "self": false,
            "source_security_group_id": "sg-0d794e5ffa6f9d2b1",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public",
            "module.sg.aws_security_group.rds",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_web_mysql_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2019525245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014d5c55debd05849",
            "security_group_rule_id": "sgr-0520e3e24b6e6799b",
            "self": false,
            "source_security_group_id": "sg-086d69d7dbf1ff0b5",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.private",
            "module.sg.aws_security_group.rds",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044edb3cab48fdaff",
            "association_id": "eipassoc-09ae867ffcdac4acf",
            "domain": "vpc",
            "id": "eipalloc-044edb3cab48fdaff",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-086f500b5b09eef08",
            "private_dns": "ip-10-10-0-247.ap-northeast-2.compute.internal",
            "private_ip": "10.10.0.247",
            "public_dns": "ec2-3-37-219-65.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.219.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-eip-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-eip-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:internet-gateway/igw-07b73503512be11b6",
            "id": "igw-07b73503512be11b6",
            "owner_id": "057845469470",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-default-igw"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-default-igw"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044edb3cab48fdaff",
            "association_id": "eipassoc-09ae867ffcdac4acf",
            "connectivity_type": "public",
            "id": "nat-034924cea954d0fbd",
            "network_interface_id": "eni-086f500b5b09eef08",
            "private_ip": "10.10.0.247",
            "public_ip": "3.37.219.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a4dd51c63cd039dd",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-095805d76bfa36ce8",
            "id": "rtb-095805d76bfa36ce8",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034924cea954d0fbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-0c024cf07a1686fb2",
            "id": "rtb-0c024cf07a1686fb2",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b73503512be11b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-0f5e01c2783fdfa33",
            "id": "rtb-0f5e01c2783fdfa33",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034924cea954d0fbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_lb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-0bc2fbaa1be4d811e",
            "id": "rtb-0bc2fbaa1be4d811e",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b73503512be11b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sub_2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0478b9b1f12ccd8d2",
            "route_table_id": "rtb-095805d76bfa36ce8",
            "subnet_id": "subnet-0c3c3b3b5e0a2b7ab"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri_sub_2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e9f9a6ea93a1e1b",
            "route_table_id": "rtb-095805d76bfa36ce8",
            "subnet_id": "subnet-0635b3e4b0b7e21fc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06962deda57b80388",
            "route_table_id": "rtb-0c024cf07a1686fb2",
            "subnet_id": "subnet-0a4dd51c63cd039dd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub_sub_2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e20bb845a55401b",
            "route_table_id": "rtb-0c024cf07a1686fb2",
            "subnet_id": "subnet-0ad67f84bd4b9f325"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_sub_2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076c519defa0659ce",
            "route_table_id": "rtb-0f5e01c2783fdfa33",
            "subnet_id": "subnet-0a56a8fe431e8ef7d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rds",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.rds",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rds_sub_2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1d5f2b4408dd77d",
            "route_table_id": "rtb-0f5e01c2783fdfa33",
            "subnet_id": "subnet-0d5406e3e3aa1801f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rds",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.rds",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_lb_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09121462d465fab9c",
            "route_table_id": "rtb-0bc2fbaa1be4d811e",
            "subnet_id": "subnet-05acd95c15cee7c08"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.web_lb_rt",
            "module.vpc.aws_subnet.web_lb",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209058e9ab7772bd",
            "route_table_id": "rtb-0bc2fbaa1be4d811e",
            "subnet_id": "subnet-056e5018ce19e77d7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.web_lb_rt",
            "module.vpc.aws_subnet.web_lb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sub_2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0c3c3b3b5e0a2b7ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c3b3b5e0a2b7ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2a"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri_sub_2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0635b3e4b0b7e21fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0635b3e4b0b7e21fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2c"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2c"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0a4dd51c63cd039dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4dd51c63cd039dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2a"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub_sub_2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0ad67f84bd4b9f325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad67f84bd4b9f325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2c"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2c"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_sub_2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0a56a8fe431e8ef7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a56a8fe431e8ef7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sub-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sub-2a"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rds_sub_2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0d5406e3e3aa1801f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5406e3e3aa1801f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sub-2c"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-rds-sub-2c"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-05acd95c15cee7c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05acd95c15cee7c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sub-0"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sub-0"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-056e5018ce19e77d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e5018ce19e77d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sub-1"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-web-lb-sub-1"
            },
            "vpc_id": "vpc-08e8693daae7b492e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:vpc/vpc-08e8693daae7b492e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0540cb9802ff30ca3",
            "default_route_table_id": "rtb-01402a938bd071cff",
            "default_security_group_id": "sg-07f85848eac18725e",
            "dhcp_options_id": "dopt-2cbef647",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e8693daae7b492e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01402a938bd071cff",
            "owner_id": "057845469470",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-vpc"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}